apps/talos_cluster/immich/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - immich.mtrnord.blog
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      timeouts:
        request: 240s
        backendRequest: 0s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: immich-compression
  namespace: immich
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: immich
  compression:
    - type: Gzip
    - type: Brotli
